--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -141,7 +141,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="@dimen/product_feed_input_margin_end"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintEnd_toStartOf="@id/product_brand_edit_tvbtn"
                 app:layout_constraintStart_toEndOf="@id/product_brand_label"
@@ -188,7 +188,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="@dimen/product_feed_input_margin_end"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -236,7 +236,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="@dimen/product_feed_input_margin_end"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -283,7 +283,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="@dimen/product_feed_input_margin_end"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
