Completed purely xml implementation of account info activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="robin_blue">#06DBC4</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="cardinal">#B41434</color>
-    <color name="darkCardinal">#870B24</color>
+    <color name="red">#A80825</color>
+    <color name="dark_red">#870B24</color>
     <color name="colorPrimaryDark">#1F4E78</color>
     <color name="colorPrimaryDarkVar">#C6285985</color>
     <color name="pinky_red">#DA688F</color>
