--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/mystic</item>
-        <item name="colorOnError">@color/cardinal</item>
+        <item name="colorOnError">@color/red</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="colorAccent">@color/denim</item>
 
