changed login option to login flag. Embedded textAllCaps = false to the style

--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -79,7 +79,6 @@
                 android:id="@+id/next_btn"
                 android:layout_width="match_parent"
                 android:gravity="center"
-                android:textAllCaps="false"
                 android:layout_margin="12dp"
                 android:text="@string/next"
                 app:layout_constraintStart_toStartOf="parent"
@@ -401,6 +400,7 @@
             android:layout_marginEnd="@dimen/general_btn_margin"
             android:gravity="center"
             android:text="@string/confirm"
+            android:textAllCaps="true"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
