--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -289,6 +289,7 @@
             android:layout_marginStart="@dimen/general_btn_margin"
             android:layout_marginEnd="@dimen/general_btn_margin"
             android:backgroundTint="@color/red"
+            android:textAllCaps="true"
             android:text="@string/delete_account"
             app:layout_constraintTop_toBottomOf="@+id/lastname_views"
             app:layout_constraintEnd_toEndOf="parent"
