--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,6 +105,7 @@
             android:layout_marginTop="60dp"
             android:layout_marginEnd="@dimen/login_layout_margin"
             android:text="@string/login"
+            android:textAllCaps="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/password_login" />
