--- a/app/src/main/res/layout/activity_password_email_sent.xml
+++ b/app/src/main/res/layout/activity_password_email_sent.xml
@@ -69,6 +69,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="@dimen/login_layout_margin"
         android:text="@string/login"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email_sent_description" />
