--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -145,6 +145,7 @@
             android:gravity="center"
             android:layout_marginEnd="@dimen/general_btn_margin"
             android:text="@string/logout"
+            android:textAllCaps="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/about_us_btn" />
