--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,6 +32,7 @@
     <style name="Widget.Scannera.Button" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">?attr/colorPrimary</item>
+        <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">@dimen/round_btn_corner_radius</item>
         <item name="android:layout_height">@dimen/medium_btn_height</item>
         <item name="android:stateListAnimator" tools:ignore="NewApi">
