Replaced loading dialog fragment with simple alert dialog based layout and style. Implemented and tested on ScanHistoryActivity, works fine.

--- a/app/src/main/res/layout/activities_with_product_list.xml
+++ b/app/src/main/res/layout/activities_with_product_list.xml
@@ -32,8 +32,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline" />
 
-    <FrameLayout
+    <include
         android:id="@+id/content_container"
+        layout="@layout/pure_recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="18dp"
