--- a/app/src/main/res/layout/product_cardview.xml
+++ b/app/src/main/res/layout/product_cardview.xml
@@ -10,7 +10,7 @@
     app:cardElevation="3dp"
     app:cardPreventCornerOverlap="true"
     android:clickable="true"
-    card_view:cardBackgroundColor="@color/product_cardview_background"
+    card_view:cardBackgroundColor="@color/product_cardview_background_dark"
     card_view:cardCornerRadius="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,7 +36,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="12dp"
             android:maxLines="3"
-            android:textColor="?attr/colorPrimaryDark"
+            android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/star_btn"
             app:layout_constraintStart_toStartOf="@id/lr_guideline"
