--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,5 @@
     <color name="textInputOutlineColor">#45D5E8</color>
     <color name="rating_star_color">#F9D31E</color>
     <color name="product_cardview_background">#ECF8FA</color>
-    <color name="product_cardview_background_dark">#F8020823</color>
+    <color name="product_cardview_background_dark">#0C1720</color>
 </resources>
