--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,236 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".SignUpActivity">
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/top_back_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:src="@drawable/ic_arrow_back"
-        android:contentDescription="@string/back_btn_content_description"
-        app:layout_constraintBottom_toTopOf="@+id/back_btn_h_guideline"
-        app:layout_constraintEnd_toStartOf="@+id/back_btn_v_guideline"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
-
-    <TextView
-        android:id="@+id/sign_up_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_slab"
-        android:text="@string/create_account"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="@dimen/title_text_size"
-        app:layout_constraintBottom_toTopOf="@+id/fst_h_guideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/username_sign_up"
-        style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fst_h_guideline"
-        app:startIconDrawable="@drawable/ic_person">
+        android:paddingBottom="@dimen/sv_main_padding_bottom">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/username_sign_up_et"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/username_sign_up"
-            android:maxLength="20" />
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:elevation="0dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@android:color/transparent">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <androidx.appcompat.widget.Toolbar
+                style="@style/Widget.Scannera.Toolbar"
+                android:theme="@style/Widget.Scannera.ToolbarTheme"
+                android:id="@+id/toolbar" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/firstname_sign_up"
-        style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/snd_h_guideline"
-        app:startIconDrawable="@drawable/ic_person_outline">
+        </com.google.android.material.appbar.AppBarLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/firstname_sign_up_et"
+        <TextView
+            android:id="@+id/activity_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_slab"
+            android:text="@string/create_account"
+            android:textColor="?attr/colorPrimary"
+            android:textSize="@dimen/small_title_text_size"
+            android:layout_marginStart="@dimen/activity_title_margin_start"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/app_bar" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/username_sign_up"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/firstname_sign_up"
-            android:maxLength="25" />
+            android:layout_height="wrap_content"
+            app:endIconMode="clear_text"
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/activity_title"
+            app:startIconDrawable="@drawable/ic_person">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/username_sign_up_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/username_sign_up"
+                android:maxLength="20" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/lastname_sign_up"
-        style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/trd_h_guideline"
-        app:startIconDrawable="@drawable/ic_person_outline">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/lastname_sign_up_et"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/firstname_sign_up"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/lastname_sign_up"
-            android:maxLength="25" />
+            android:layout_height="wrap_content"
+            app:endIconMode="clear_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/username_sign_up"
+            app:startIconDrawable="@drawable/ic_person_outline">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/firstname_sign_up_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/firstname_sign_up"
+                android:maxLength="25" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_sign_up"
-        style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fourth_h_guideline"
-        app:startIconDrawable="@drawable/ic_email">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email_sign_up_et"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/lastname_sign_up"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/email_sign_up"
-            android:maxLength="45" />
+            android:layout_height="wrap_content"
+            app:endIconMode="clear_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/firstname_sign_up"
+            app:startIconDrawable="@drawable/ic_person_outline">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/lastname_sign_up_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/lastname_sign_up"
+                android:maxLength="25" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_sign_up"
-        style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="password_toggle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fifth_h_guideline"
-        app:startIconDrawable="@drawable/ic_lock">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password_sign_up_et"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/email_sign_up"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textPassword"
-            android:hint="@string/password_sign_up"
-            android:maxLength="20" />
+            android:layout_height="wrap_content"
+            app:endIconMode="clear_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lastname_sign_up"
+            app:startIconDrawable="@drawable/ic_email">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email_sign_up_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/email_sign_up"
+                android:maxLength="45" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/confirm_password_sign_up"
-        style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:endIconMode="password_toggle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/sixth_h_guideline"
-        app:startIconDrawable="@drawable/ic_check_circle">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/confirm_password_sign_up_et"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password_sign_up"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/confirm_password_sign_up"
-            android:inputType="textPassword"
-            android:maxLength="20" />
+            android:layout_height="wrap_content"
+            app:endIconMode="password_toggle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/email_sign_up"
+            app:startIconDrawable="@drawable/ic_lock">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_sign_up_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="textPassword"
+                android:hint="@string/password_sign_up"
+                android:maxLength="20" />
 
-    <com.google.android.material.button.MaterialButton
-        style="@style/Widget.Scannera.Button"
-        android:id="@+id/sign_up_btn"
-        android:layout_width="match_parent"
-        android:layout_marginStart="@dimen/login_layout_margin"
-        android:layout_marginEnd="@dimen/login_layout_margin"
-        android:text="@string/signup"
-        android:textAllCaps="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/fst_h_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.17" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/confirm_password_sign_up"
+            style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:endIconMode="password_toggle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/password_sign_up"
+            app:startIconDrawable="@drawable/ic_check_circle">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/snd_h_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.27" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/confirm_password_sign_up_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/confirm_password_sign_up"
+                android:inputType="textPassword"
+                android:maxLength="20" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/trd_h_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.37" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/fourth_h_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.47" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/sign_up_btn"
+            style="@style/Widget.Scannera.Button"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/bottom_main_btn_margin_top"
+            android:layout_marginStart="@dimen/login_layout_margin"
+            android:layout_marginEnd="@dimen/login_layout_margin"
+            android:text="@string/signup"
+            android:textAllCaps="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/confirm_password_sign_up" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/fifth_h_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.57" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/sixth_h_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.67" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/bottom_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/back_btn_h_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.07" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/back_btn_v_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
