Changed the top back button of the forgotten password activity to be embedded in toolbar.

--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -11,22 +11,28 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/sv_main_padding_bottom"
+        >
 
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/top_back_btn"
-            android:layout_width="wrap_content"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:contentDescription="@string/back_btn_content_description"
-            android:src="@drawable/ic_arrow_back"
-            app:layout_constraintBottom_toTopOf="@+id/back_btn_h_guideline"
-            app:layout_constraintEnd_toStartOf="@+id/back_btn_v_guideline"
-            app:layout_constraintHorizontal_bias="0.75"
-            app:layout_constraintStart_toStartOf="parent"
+            android:fitsSystemWindows="true"
+            app:elevation="0dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75"
-            tools:ignore="TouchTargetSizeCheck" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@android:color/transparent">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                style="@style/Widget.Scannera.Toolbar"
+                android:theme="@style/Widget.Scannera.ToolbarTheme" />
+
+        </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
             android:id="@+id/activity_title"
@@ -35,10 +41,10 @@
             android:fontFamily="@font/roboto_slab"
             android:text="@string/forgot_your_password_title"
             android:textColor="?attr/colorPrimary"
-            android:textSize="@dimen/small_title_text_size"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="@dimen/activity_title_text_size"
+            android:layout_marginStart="@dimen/activity_title_margin_start"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline" />
+            app:layout_constraintTop_toBottomOf="@id/app_bar" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/forgot_password_animation"
