--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -25,9 +25,9 @@
             android:background="@android:color/transparent">
 
             <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 style="@style/Widget.Scannera.Toolbar"
-                android:theme="@style/Widget.Scannera.ToolbarTheme"
-                android:id="@+id/toolbar" />
+                android:theme="@style/Widget.Scannera.ToolbarTheme" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -38,7 +38,7 @@
             android:fontFamily="@font/roboto_slab"
             android:text="@string/create_account"
             android:textColor="?attr/colorPrimary"
-            android:textSize="@dimen/small_title_text_size"
+            android:textSize="@dimen/activity_title_text_size"
             android:layout_marginStart="@dimen/activity_title_margin_start"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/app_bar" />
