--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="sv_main_padding_bottom">32dp</dimen>
+    <dimen name="activity_title_text_size">28sp</dimen>
     <dimen name="activity_title_margin_start">24dp</dimen>
     <dimen name="bottom_main_btn_margin_top">48dp</dimen>
     <dimen name="general_btn_margin">24dp</dimen>
@@ -8,8 +9,6 @@
     <dimen name="social_icons_margin">20dp</dimen>
     <dimen name="general_icons_size">42dp</dimen>
     <dimen name="general_icons_margin">20dp</dimen>
-    <dimen name="small_title_text_size">28sp</dimen>
-    <dimen name="title_text_size">32sp</dimen>
     <dimen name="small_text_size">16sp</dimen>
     <dimen name="medium_btn_height">60dp</dimen>
     <dimen name="round_btn_corner_radius">24dp</dimen>
