Modified dimen elements. Changed the top close button of the password sent activity to be embedded in toolbar.

--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -42,9 +42,10 @@
             android:text="@string/forgot_your_password_title"
             android:textColor="?attr/colorPrimary"
             android:textSize="@dimen/activity_title_text_size"
-            android:layout_marginStart="@dimen/activity_title_margin_start"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/app_bar" />
+
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/forgot_password_animation"
@@ -109,20 +110,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/email_input"/>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/back_btn_h_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.07" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/back_btn_v_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.1" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/email_input_guideline"
