--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -34,7 +34,7 @@
             android:fontFamily="@font/roboto_slab"
             android:text="@string/account_information"
             android:textColor="?attr/colorPrimary"
-            android:textSize="@dimen/title_text_size"
+            android:textSize="@dimen/activity_title_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline"
