--- a/app/src/main/res/layout/activity_password_email_sent.xml
+++ b/app/src/main/res/layout/activity_password_email_sent.xml
@@ -7,19 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".PasswordEmailSentActivity">
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/top_close_btn"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:contentDescription="@string/close_btn_content_description"
-        android:src="@drawable/ic_close"
-        app:layout_constraintBottom_toTopOf="@+id/close_btn_h_guideline"
-        app:layout_constraintEnd_toStartOf="@+id/close_btn_v_guideline"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="parent"
+        android:fitsSystemWindows="true"
+        app:elevation="0dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@android:color/transparent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/Widget.Scannera.Toolbar"
+            android:theme="@style/Widget.Scannera.ToolbarCloseTheme" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
         android:id="@+id/email_sent_tv"
@@ -28,7 +33,7 @@
         android:fontFamily="@font/roboto_slab"
         android:text="@string/email_sent"
         android:textColor="?attr/colorPrimary"
-        android:textSize="@dimen/small_title_text_size"
+        android:textSize="@dimen/activity_title_text_size"
         app:layout_constraintBottom_toTopOf="@id/email_sent_animation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -104,19 +109,5 @@
             android:textSize="@dimen/small_text_size" />
 
     </LinearLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/close_btn_h_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.07" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/close_btn_v_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
