--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -39,7 +39,7 @@
             android:text="@string/create_account"
             android:textColor="?attr/colorPrimary"
             android:textSize="@dimen/activity_title_text_size"
-            android:layout_marginStart="@dimen/activity_title_margin_start"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/app_bar" />
 
