--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,8 @@
         android:layout_height="300dp"
         android:fitsSystemWindows="true"
         app:elevation="2dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@android:color/transparent">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/home_collapsing_toolbar"
@@ -31,7 +32,8 @@
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
-                android:src="@drawable/monash_uni_img" />
+                android:src="@drawable/monash_uni_img"
+                android:contentDescription="@string/home_collapsing_image_content_description" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/home_toolbar"
